# matpatch

./: .gitignore  CMakeLists.txt  README.md  setup.py
examples/: graddiv.py  poisson.py  temp.py
matpatch/: __init__.py  matinvert.cpp  matpatch.cpp  pc.py
src/: pyblockjacobi.cpp
